--- a/.gitignore
+++ b/.gitignore
@@ -9,30 +9,54 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# dependencies
+# Dependencies
 node_modules
 /.pnp
 .pnp.js
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
 
-# production
+# Testing
+/coverage
+
+# Production & build files
+/build
 /dist
 /dist-ssr
+*.tsbuildinfo
 
-# misc
+# Environment & local files
 .env
+.env.*
+!.env.example
 .DS_Store
 *.local
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+
+# Cache
+.cache
+.npm
+.eslintcache
+.stylelintcache
+
+# Generated output
+src/generated
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json.example
 .idea
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumb.db
+desktop.ini
+
+# Debug
+.debug
